--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
 		#sosiski {
 			position: relative;
 			top: 80px;
-			width: 100px;
+			width: 70%;
 			height: 20px;
 			margin-left: 10px;
 			background-color: orange;
-			border-radius: 20%;
+			border-radius: 8px;
 			font-family: "calibri";
 			text-align: center;
 			color: white;
@@ -127,11 +127,11 @@
 		#ribka {
 			position: relative;
 			top: 70px;
-			width: 120px;
+			width: 80%;
 			height: 20px;
 			margin-left: 10px;
 			background-color: green;
-			border-radius: 20%;
+			border-radius: 8px;
 			font-family: "calibri";
 			text-align: center;
 			color: white;
@@ -140,11 +140,11 @@
 		#pivas {
 			position: relative;
 			top: 120px;
-			width: 80px;
+			width: 90%;
 			height: 20px;
 			margin-left: 10px;
 			background-color: blue;
-			border-radius: 20%;
+			border-radius: 8px;
 			font-family: "calibri";
 			text-align: center;
 			color: white;
