--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
 				height: 105px;
 				position: relative;
 				top: 25px;
-				left: 25px;
+				left: 20px;
+				border: 3px solid white;
+				border-radius: 35%
 				
 		}
 		
@@ -183,7 +185,7 @@
 <div id="container">
 	<div id="top"> Curriculum vitae </div>
 	<div id="left">
-		<img src='cat.jpg' alt = 'no image' style="border-radius: 35%" />
+		<img src='cat.jpg' alt = 'no image'/>
 		<span id="name1"> Макарон </span>
 		<span id="name2"> Макароныч </span>
 		<span class="love"> Люблю: </span>
